@@ -2,6 +2,8 @@ prebaseconfig (1.04) UNRELEASED; urgency=low
 
   * Jim Lieb
     - Force early loading of ide chip drivers on 2.4 (works around #273106).
+  * Joey Hess
+    - Only install 49cdrom-module-ia64 on ia64.
 
  -- Jim Lieb <lieb@wildopensource.com>  Thu, 14 Oct 2004 19:05:00 -0700
 
